Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -12,6 +12,10 @@
         {
             var placeholder = "Search";
         }
+    else
+    {
+            var placeholder "Teste";
+    }
 
 
 }
