--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -33,8 +33,8 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder=@placeholder name="q">
-        <button>@placeholder</button>
+        <input type="text" placeholder=@language name="q">
+        <button>@language</button>
     </form>
     </div>
 </div>
