Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -10,11 +10,11 @@
 	
 	if(language.ToString()=="EN")
         {
-            var placeholder = "Search"
+            var placeholder = "Search";
         }
     else
     {
-            var placeholder "Teste"
+            var placeholder "Teste";
     }
 
 
