Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -8,7 +8,7 @@
 	IEnumerable<PublishedSearchResult> searchResults;
 	var language = content.Value("lang");
 	
-	if(language.ToString()=="EN")
+	@if(language.ToString()=="EN")
         {
             var placeholder = "Search";
         }
