Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -12,7 +12,7 @@
         {
             var placeholder = "Search";
         }
-    else
+    else if (language="PT")
     {
             var placeholder "Teste";
     }
