Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -10,11 +10,11 @@
 	
 	if (Convert.ToString(language)=="EN")
     {
-    <p>The price is high.</p>
+        var placeholder = "Search";
     }
     else if (Convert.ToString(language) =="PT") 
     {
-    <p>The price is OK.</p>
+        var placeholder = "Procurar";
     }
     else
     {
