Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -11,6 +11,7 @@
 	if (Convert.ToString(language)=="EN")
     {
         var placeholder = "Search";
+        <p>@placeholder</p>
     }
     else if (Convert.ToString(language) =="PT") 
     {
