Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -10,11 +10,11 @@
 	
 	if (Convert.ToString(language)=="EN")
     {
-        var placeholder = "Search"
+        string placeholder = "Search"
     }
     else if (Convert.ToString(language) =="PT") 
     {
-        var placeholder = "Procurar"
+        string placeholder = "Procurar"
     }
     else
     {
