Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -12,7 +12,7 @@
     {
         string placeholder = "Search";
         <p>teste</p>
-        <p>@</p>
+        <p>@placeholder</p>
     }
     else if (Convert.ToString(language) =="PT") 
     {
