Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -17,6 +17,8 @@
     else if (Convert.ToString(language) =="PT") 
     {
         string placeholder = "Procurar";
+                <p>teste2</p>
+        <p>@placeholder</p>
     }
     else
     {
