Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -38,7 +38,7 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder=Convert.ToString(@placeholder) name="q">
+        <input type="text" placeholder=Convert.ToString("@placeholder") name="q">
         <button>@language</button>
     </form>
     </div>
