Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -11,13 +11,13 @@
 	
 	if (Convert.ToString(language)=="EN")
     {
-        var textSearch = "Search";
+        textSearch = "Search";
         <p>teste</p>
         <p>@textSearch</p>
     }
     else if (Convert.ToString(language) =="PT") 
     {
-        string textSearch = "Procurar";
+        textSearch = "Procurar";
                 <p>teste2</p>
         <p>@textSearch</p>
     }
