Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -11,11 +11,11 @@
 	
 	if (Convert.ToString(language)=="EN")
     {
-        var textSearch = "Search";
+        textSearch = "Search";
     }
     else if (Convert.ToString(language) =="PT") 
     {
-        var textSearch = "Procurar";
+        textSearch = "Procurar";
     }
     else
     {
