Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -61,6 +61,9 @@
     {
         <p>Foram encontrados <strong>@resultCount</strong> resultado@(resultCount != 1 ? "s" : "") ao procurar por <strong>@searchQuery</strong></p>
     }
+    else
+    {
+    
 
         
         @if (resultCount > 0)
