Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -33,6 +33,10 @@
   margin-right: auto;
   width: 55%;
 }
+
+.sqs-search-page-more-wrapper {
+    display: none;
+}
 </style>
 
 <div class="container">
