--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -55,7 +55,7 @@
 	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"))*@;
 
     long resultCount = results != null && results.Any() ? results.Count() : 0;
-    <div class="searchresults center">
+    <div class="searchresults center sqs-search-page-more-wrapper">
         
     @if (Convert.ToString(language)=="EN")
     {
