Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -26,122 +26,7 @@
 
 
 }
-<style type="text/css">
-.search {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 55%;
-}
-
-body {
-  margin: 15px 0;
-}
-
-h1 {
-  color: #6C7A89;
-  font-size: 6em;
-}
-
-#searcharea {
-  margin-bottom: 15px;
-}
-
-#search-bar {
-  border: 1px solid #F7CA18;
-  border-radius: 35px;
-}
-
-#search-bar > i {
-  color: #ECECEC;
-}
-
-#search-bar > input {
-  width: 90%;
-  font-size: 4em;
-  color: #BFBFBF;
-  margin: 15px 0 15px 10px;
-  border: 0;
-}
-
-#search-bar > input:focus {
-  outline: none;
-}
-
-.result {
-  color: black !important;
-  text-decoration: none !important;
-  padding-bottom: 15px;
-}
-
-.result:hover {
-  border-left: 15px solid #22313F;
-}
-/* MEDIA QUERRIES*/
-
-@media (max-width: 1200px) {
-  #search-bar > input {
-    width: 85%;
-  }
-}
-
-@media (max-width: 992px) {
-  body {
-    padding: 0 10px;
-  }
-  #search-bar > input {
-    width: 725px;
-  }
-  .result {
-    border-bottom: none;
-  }
-  .result:hover {
-    text-decoration: none;
-    border-left: none;
-  }
-}
-
-@media (max-width: 992px) {
-  #search-bar > input {
-    width: 240px;
-  }
-}
-
-@media (max-width: 320px) {
-  #search-bar > input {
-    width: 189px;
-  }
-}
-/* ANIMATIONS */
-
-.animation {
-  opacity: 0;
-  transition: all 200ms ease-in;
-}
-
-.animation-2 {
-  opacity: 0;
-  transition: all 1000ms ease-in;
-}
-
-.animation.fade-in,
-.animation-2.fade-in {
-  opacity: 1;
-}
-
-.result {
-  opacity: 0;
-  transition: all 500ms ease-in-out;
-}
-
-.result.fade-in {
-  opacity: 1;
-}
-
-.result.fade-out {
-  opacity: 0;
-}
-</style>
+<link rel="stylesheet" href="@Url.Content("~/css/Carousel-Hero.css")"/>
 
 <div class="container">
     <div class="search">
