Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -27,6 +27,7 @@
 
 }
 <link rel="stylesheet" href="@Url.Content("~/css/Carousel-Hero.css")"/>
+<script src="~/scripts/block4.js></script>
 
 <div class="container">
     <div class="search">
