--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -26,6 +26,122 @@
 
 
 }
+<style type="text/css">
+.search {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 55%;
+}
+
+body {
+  margin: 15px 0;
+}
+
+h1 {
+  color: #6C7A89;
+  font-size: 6em;
+}
+
+#searcharea {
+  margin-bottom: 15px;
+}
+
+#search-bar {
+  border: 1px solid #F7CA18;
+  border-radius: 35px;
+}
+
+#search-bar > i {
+  color: #ECECEC;
+}
+
+#search-bar > input {
+  width: 90%;
+  font-size: 4em;
+  color: #BFBFBF;
+  margin: 15px 0 15px 10px;
+  border: 0;
+}
+
+#search-bar > input:focus {
+  outline: none;
+}
+
+.result {
+  color: black !important;
+  text-decoration: none !important;
+  padding-bottom: 15px;
+}
+
+.result:hover {
+  border-left: 15px solid #22313F;
+}
+/* MEDIA QUERRIES*/
+
+@media (max-width: 1200px) {
+  #search-bar > input {
+    width: 85%;
+  }
+}
+
+@media (max-width: 992px) {
+  body {
+    padding: 0 10px;
+  }
+  #search-bar > input {
+    width: 725px;
+  }
+  .result {
+    border-bottom: none;
+  }
+  .result:hover {
+    text-decoration: none;
+    border-left: none;
+  }
+}
+
+@media (max-width: 992px) {
+  #search-bar > input {
+    width: 240px;
+  }
+}
+
+@media (max-width: 320px) {
+  #search-bar > input {
+    width: 189px;
+  }
+}
+/* ANIMATIONS */
+
+.animation {
+  opacity: 0;
+  transition: all 200ms ease-in;
+}
+
+.animation-2 {
+  opacity: 0;
+  transition: all 1000ms ease-in;
+}
+
+.animation.fade-in,
+.animation-2.fade-in {
+  opacity: 1;
+}
+
+.result {
+  opacity: 0;
+  transition: all 500ms ease-in-out;
+}
+
+.result.fade-in {
+  opacity: 1;
+}
+
+.result.fade-out {
+  opacity: 0;
+}
+</style>
 
 <div class="container">
     <div class="search">
@@ -72,3 +188,32 @@
         }
     </div>
 }
+
+<html ng-app="wikiApp">
+
+<head>
+  <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
+</head>
+
+<body ng-controller="mainController as main">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 text-center">
+        <h1 class="animation" ng-class="{'fade-in': fadeHeader }">Wiki Search!</h1>
+      </div>
+    </div>
+    <div class="animation-2" ng-class="{'fade-in': fadeSearchbar }" id="searcharea" class="row">
+      <div id="search-bar" class="col-md-8 col-md-offset-2">
+        <i class="fa fa-search fa-5x"></i>
+        <input ng-enter="submit()" ng-model="string" type="text" placeholder="search" />
+      </div>
+    </div>
+    <div id="search-results" class="row">
+      <a href="{{link.url}}" target="_blank" ng-repeat="link in links" class="col-md-8 col-md-offset-2 result" ng-class="{'fade-in': fadeResults, 'fade-out' : !fadeResults}">
+        <h2>{{link.title}}<br><small>{{link.snippet}}</small></h2>
+      </a>
+    </div>
+  </div>
+</body>
+
+</html>
