--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -35,7 +35,11 @@
 }
 
 .prepare-results {
-background-color: rgb(245,245,245);
+  background-color: rgb(245,245,245);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 55%;
 }
 </style>
 
