--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -51,7 +51,7 @@
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
 
-        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
+        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "ExternalIndex")
 	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"))*@;
 
     long resultCount = results != null && results.Any() ? results.Count() : 0;
