Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -53,9 +53,8 @@
 {
 
         var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
-	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"))*@;
+	                        .Where(w => w.Content.IsDocumentType("blockListDocumentType"));
 
-    <p>@results</p>
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults center">
         
