--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -5,7 +5,7 @@
 @{
     var content = (ContentModels.Block4)Model.Content;
     var counter = 0;
-    var searchQuery = Request.QueryString["q"];
+    var searchQuery = Request.QueryString["search"];
 	IEnumerable<PublishedSearchResult> searchResults;
 	var language = content.Value("lang");
 	var placeholder = "";
@@ -43,7 +43,7 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder=@placeholdertext name="q">
+        <input type="text" placeholder=@placeholdertext name="search">
         <button>@placeholder</button>
     </form>
     </div>
