--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
 @using Umbraco.Core.Models.Blocks;
-@using Current = Umbraco.Web.Composing.Current;
+@using Umbraco.Examine;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
     var content = (ContentModels.Block4)Model.Content;
