--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -26,7 +26,7 @@
         </nav>
         -->
         <div>
-            <form action="@Model.Url()" method="get">
+            <form action="" method="get">
                 <input type="text" placeholder="Search" id="query" name="query" />
                 <button>Search</button>
             </form>
