Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -35,7 +35,7 @@
 
         <div>
             @{
-                var searchTerm = string.Empty;
+       @*         var searchTerm = string.Empty;
                 searchTerm = string.IsNullOrEmpty(Request["query"])
                     ? string.Empty
                     : Request["query"];
@@ -62,7 +62,7 @@
                         }
                     }
                     return;
-                }
+                }*@
             }
         </div>
         <div class="employee-grid">
