Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -5,5 +5,6 @@
 @{
     Layout = "master.cshtml";
 }
+var content = (ContentModels.Block4)Model.Content;
 
 @Html.Partial("~/Views/Partials/SectionHeader.cshtml")
