Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -2,6 +2,7 @@
 @using Umbraco.Core.Models.Blocks;
 @using Umbraco.Examine;
 @using System.Linq;
+@using ContentModels = Umbraco.Web.PublishedModels;
 @{
     Layout = "master.cshtml";
 }
