--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -1,3 +1,11 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
+@{
+    var content = (ContentModels.Block4)Model.Content;
+    var counter = 0;
+    var searchQuery = Request.QueryString["search"];
+	IEnumerable<PublishedSearchResult> searchResults;
+
+
+}
