Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -43,7 +43,7 @@
                 }
                 else
                 {
-                    if(ExamineManager.Instance.TryGetIndex("InternalIndex", out var index))
+                    if(ExamineManager.Instance.TryGetIndex("ExternalIndex", out var index))
                     {
                         var searcher = index.GetSearcher();
                         var results = searcher.CreateQuery("content").NodeTypeAlias("blockListDocumentType").And().Field("nodeName", searchTerm).Execute();
