Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -46,9 +46,9 @@
                     if(ExamineManager.Instance.TryGetIndex("ExternalIndex", out var index))
                     {
                         var searcher = index.GetSearcher();
-                        var results = searcher.CreateQuery()
-    .RangeQuery<DateTime>(new[] { "created" }, new DateTime(2000, 01,      02), new DateTime(2000, 01, 05), maxInclusive: false);
-                        
+                        var results = searcher.CreateQuery() // Create a query
+ .Field("Address", "Hills") // Look for any "Hills" addresses
+ .Execute(); // Execute the search
                         if (results.Any())
                         {
                             <ul>
